# likeprocessing

./: .gitignore  balle_rebondissante.py  casse_brique_class.py  casse_brique_jeu.py  combobox.py  deplacement.py  essai_pymunk.py  ihm_liste.py  illusion.py  kline.py  likeprophy.py  main.py  pacman.py  parcourt.py  pyproject.toml  rotation.py  scroll_bar.py  stormberg.py  test_image.py  test_is_in.py  test_like_phy.py  test_souris.py  tp_processing_th.py  train.py  triangle_pascal.py  turing.py  velvet integrator.py
likeprocessing/: README.md  affichage.py  bloc2D.py  couleur.py  exceptions.py  formes.py  images.py  jauge.py  list_tools.py  print_vars.py  processing.py  pyDialog.py  pygame_textinput.py  tempos.py  texte.py  tor.py  transformation.py  trigo.py
