[tool.poetry]
name = "likeprocessing"
version = "0.1.1"
description = "Like processing library with pygame"
authors = ["Pierre Lemaitre <oultetman@sfr.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
