[tool.poetry]
name = "likeprocessing"
version = "0.1.4.01"
description = "Like processing library with pygame"
authors = ["Pierre Lemaitre <oultetman@sfr.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
