[tool.poetry]
name = "likeprocessing"
version = "0.1.7.4.1"
description = "Like processing library with pygame"
authors = ["Pierre Lemaitre <oultetman@sfr.fr>"]
readme = "likeprocessing/README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
pygame_textinput ="^1.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
